NP-46337-scopus-import-parallelize-fetching-cristin-contributor (#1590)
* NP-46337-scopus-import-parallelize-fetching-cristin-contributor, implemented

* NP-46337-scopus-import-parallelize-fetching-cristin-contributor, code-review